# vstu_xls

./: .gitignore  LICENSE  README.md  VSTU-PARSING.md  main.py  pyproject.toml  requirements.txt
cnf/: cell_types.yml  grammar_root.yml  lesson_frames.yml  specific_patterns.yml
demo/: batch_demo.py  debug_demo.py  json_demo.py  matcher_demo.py
docs/: diagnostics_overview.md  index.md  parser_diagnostics.md  parser_usage_basics.md  project_overview.md
materials/: corrections.txt.py  groupnames.txt  schedule_reference_import.json  try-xlrd-2.ipynb  vstu-discipline-shortnames.txt  ОН_Магистратура_ 1 курс ФТКМ - unique-values.txt  ОН_Магистратура_2 курс ХТФ - unique-values.txt  ОН_ФАТ_1_курс - unique-values.txt  ОН_ФЭВТ_1 курс - unique-values.txt  ОН_ФЭВТ_3 курс - unique-values.txt  Сборник_1 - unique-values.txt  идеи-парсинга.txt  пост-правки расписание.txt
src/: batch_debug.py  confidence_matching.py  constraints_2d.py  constraints_2d_test.py  debug_demo.py  demo.py  geom1d.py  geom2d.py  grammar2d.py  grammar2d_matching.py  grid.py  main.py  test_classify_cells.py  test_confidence_matching.py  test_constraints_2d.py  test_geom1d.py  test_geom2d.py  test_grid.py  util_main.py
tests/: analyze_pattern_overlaps.py  test_ArithmeticRelation.py  test_clash.py  test_classification_on_real_data.py  test_classify_cells.py  test_confidence_matching.py  test_constraints_2d.py  test_geom1d.py  test_geom2d.py  test_grammar.py  test_grammar_matching.py  test_grid.py  test_grid_vstu_fevt1+full-weeks.json  test_grid_vstu_fevt1.json  test_improved_patterns.py  tests_bootstrapper.py  (+4 more)
(+211 files in other folders)
